// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventCaption component renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontSize": 14,
        "lineHeight": 18,
        "paddingBottom": 5,
        "paddingHorizontal": 12,
        "paddingTop": 17,
      },
      Object {
        "color": undefined,
      },
    ]
  }
>
  hola
</Text>
`;

exports[`EventCaption component renders correctly with complex caption with users and hashtags 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontSize": 14,
        "lineHeight": 18,
        "paddingBottom": 5,
        "paddingHorizontal": 12,
        "paddingTop": 17,
      },
      Object {
        "color": undefined,
      },
    ]
  }
>
  hola 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    @cpinto7
  </Text>
   
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    #wowow
  </Text>
   
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    #test_
  </Text>
   
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    @applicaster
  </Text>
   more stuff yeiah
</Text>
`;

exports[`EventCaption component renders correctly with no caption 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
/>
`;
